--- a/BabyApp/BabyApp/Info.plist
+++ b/BabyApp/BabyApp/Info.plist
@@ -22,6 +22,14 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>AvenirNextLTPro-It.otf</string>
+		<string>AvenirNextLTPro-Regular.otf</string>
+		<string>AvenirNextLTPro-Cn.otf</string>
+		<string>AvenirNextLTPro-MediumCn.otf</string>
+		<string>HelveticaNeueCyr-Light.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
